<?xml version="1.0"?>
<package format="2">
  <name>fcs_interface</name>
  <version>1.0.0</version>
  <description>The purpose of this package is to act as interface between different drives of drones and our code</description>
  <maintainer email="l.mudrich@leeds.ac.uk">Lenka Mudrich</maintainer>
  <license>MIT</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dji_sdk</depend>
  <depend>uav_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
