<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>fcsmap_fcs_suite_t2180</name>
	<version>1.0.0</version>
	<description>unknown</description>
	<maintainer email="none@none.com">none</maintainer>
	<license>none</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>fcsmap_fcs_suite</depend>
	<depend>fcs_interface</depend>
</package>
