<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>map_bm_suite</name>
	<version>1.0.0</version>
	<description>unknown</description>
	<maintainer email="none@none.com">none</maintainer>
	<license>none</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>water_monitor</depend>
	<depend>uav_msgs</depend>
	<depend>battery_monitor</depend>
</package>
